# ls-video-transcribe

./: .gitignore  README.md  main.py  pyproject.toml  render.yaml  requirements.txt  web.py
src/video_transcript/: __init__.py  chunked_transcription.py  cli.py  transcriber.py  web.py
